# lennatin

./: .gitignore  CMakeLists.txt  Makefile  README.md  kehapuskuri.h  lennatin.ino  main.c  merkit.h  morse.h
.github/workflows/: arduino-build.yml  avr-c.yml  cmake.yml
src/: lcd.c  lcd.h  main.c  morse.c  morse.h  ringbuffer.c  ringbuffer.h
test/: .gitignore  Makefile  kehapuskuri_test.cpp  main.c  morse_test.c  morse_test.cpp  morse_test.h  ringbuffer_test.c  ringbuffer_test.h
